// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Feedback/Progress Circular smoke-test 1`] = `
<div style="display: inline-flex; position: relative;">
  <span class="MuiCircularProgress-root MuiCircularProgress-indeterminate MuiCircularProgress-colorPrimary css-mui-classname"
        role="progressbar"
        data-cy="progress"
        style="width: 40px; height: 40px;"
  >
    <svg class="MuiCircularProgress-svg css-mui-classname"
         viewbox="22 22 44 44"
    >
      <circle class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate css-mui-classname"
              cx="44"
              cy="44"
              r="20.2"
              fill="none"
              stroke-width="3.6"
      >
      </circle>
    </svg>
  </span>
</div>
`;

exports[`Feedback/Progress CircularColor smoke-test 1`] = `
<div style="display: inline-flex; position: relative;">
  <span class="MuiCircularProgress-root MuiCircularProgress-indeterminate MuiCircularProgress-colorError css-mui-classname"
        role="progressbar"
        data-cy="progress"
        style="width: 40px; height: 40px;"
  >
    <svg class="MuiCircularProgress-svg css-mui-classname"
         viewbox="22 22 44 44"
    >
      <circle class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate css-mui-classname"
              cx="44"
              cy="44"
              r="20.2"
              fill="none"
              stroke-width="3.6"
      >
      </circle>
    </svg>
  </span>
</div>
`;

exports[`Feedback/Progress CircularDeterminate smoke-test 1`] = `
<div style="display: inline-flex; position: relative;">
  <span class="MuiCircularProgress-root MuiCircularProgress-determinate MuiCircularProgress-colorPrimary css-mui-classname"
        role="progressbar"
        aria-valuenow="50"
        data-cy="progress"
        style="width: 40px; height: 40px; transform: rotate(-90deg);"
  >
    <svg class="MuiCircularProgress-svg css-mui-classname"
         viewbox="22 22 44 44"
    >
      <circle class="MuiCircularProgress-circle MuiCircularProgress-circleDeterminate css-mui-classname"
              cx="44"
              cy="44"
              r="20.2"
              fill="none"
              stroke-width="3.6"
              style="stroke-dasharray: 126.92; stroke-dashoffset: 63.46px;"
      >
      </circle>
    </svg>
  </span>
</div>
`;

exports[`Feedback/Progress CircularInvalidValue smoke-test 1`] = `
<div style="display: inline-flex; position: relative;">
  <span class="MuiCircularProgress-root MuiCircularProgress-indeterminate MuiCircularProgress-colorPrimary css-mui-classname"
        role="progressbar"
        data-cy="progress"
        style="width: 40px; height: 40px;"
  >
    <svg class="MuiCircularProgress-svg css-mui-classname"
         viewbox="22 22 44 44"
    >
      <circle class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate css-mui-classname"
              cx="44"
              cy="44"
              r="20.2"
              fill="none"
              stroke-width="3.6"
      >
      </circle>
    </svg>
  </span>
</div>
`;

exports[`Feedback/Progress CircularWithLabel smoke-test 1`] = `
<div style="display: inline-flex; position: relative;">
  <span class="MuiCircularProgress-root MuiCircularProgress-determinate MuiCircularProgress-colorPrimary css-mui-classname"
        role="progressbar"
        aria-valuenow="50"
        data-cy="progress"
        style="width: 40px; height: 40px; transform: rotate(-90deg);"
  >
    <svg class="MuiCircularProgress-svg css-mui-classname"
         viewbox="22 22 44 44"
    >
      <circle class="MuiCircularProgress-circle MuiCircularProgress-circleDeterminate css-mui-classname"
              cx="44"
              cy="44"
              r="20.2"
              fill="none"
              stroke-width="3.6"
              style="stroke-dasharray: 126.92; stroke-dashoffset: 63.46px;"
      >
      </circle>
    </svg>
  </span>
  <div class="MuiTypography-root MuiTypography-caption css-mui-classname"
       style="align-items: center; display: flex; justify-content: center; position: absolute; inset: 0px;"
  >
    50%
  </div>
</div>
`;

exports[`Feedback/Progress Linear smoke-test 1`] = `
<div style="align-items: center; display: flex;">
  <span class="MuiLinearProgress-root MuiLinearProgress-colorPrimary MuiLinearProgress-indeterminate css-mui-classname"
        role="progressbar"
        data-cy="progress"
        style="margin-right: 8px; width: 100%;"
  >
    <span class="MuiLinearProgress-bar MuiLinearProgress-barColorPrimary MuiLinearProgress-bar1Indeterminate css-mui-classname">
    </span>
    <span class="MuiLinearProgress-bar MuiLinearProgress-barColorPrimary MuiLinearProgress-bar2Indeterminate css-mui-classname">
    </span>
  </span>
</div>
`;

exports[`Feedback/Progress LinearColor smoke-test 1`] = `
<div style="align-items: center; display: flex;">
  <span class="MuiLinearProgress-root MuiLinearProgress-colorError MuiLinearProgress-indeterminate css-mui-classname"
        role="progressbar"
        data-cy="progress"
        style="margin-right: 8px; width: 100%;"
  >
    <span class="MuiLinearProgress-bar MuiLinearProgress-barColorError MuiLinearProgress-bar1Indeterminate css-mui-classname">
    </span>
    <span class="MuiLinearProgress-bar MuiLinearProgress-barColorError MuiLinearProgress-bar2Indeterminate css-mui-classname">
    </span>
  </span>
</div>
`;

exports[`Feedback/Progress LinearDeterminate smoke-test 1`] = `
<div style="align-items: center; display: flex;">
  <span class="MuiLinearProgress-root MuiLinearProgress-colorPrimary MuiLinearProgress-determinate css-mui-classname"
        role="progressbar"
        aria-valuenow="50"
        aria-valuemin="0"
        aria-valuemax="100"
        data-cy="progress"
        style="margin-right: 8px; width: 100%;"
  >
    <span class="MuiLinearProgress-bar MuiLinearProgress-barColorPrimary MuiLinearProgress-bar1Determinate css-mui-classname"
          style="transform: translateX(-50%);"
    >
    </span>
  </span>
</div>
`;

exports[`Feedback/Progress LinearInvalidValue smoke-test 1`] = `
<div style="align-items: center; display: flex;">
  <span class="MuiLinearProgress-root MuiLinearProgress-colorPrimary MuiLinearProgress-indeterminate css-mui-classname"
        role="progressbar"
        data-cy="progress"
        style="margin-right: 8px; width: 100%;"
  >
    <span class="MuiLinearProgress-bar MuiLinearProgress-barColorPrimary MuiLinearProgress-bar1Indeterminate css-mui-classname">
    </span>
    <span class="MuiLinearProgress-bar MuiLinearProgress-barColorPrimary MuiLinearProgress-bar2Indeterminate css-mui-classname">
    </span>
  </span>
</div>
`;

exports[`Feedback/Progress LinearWithLabel smoke-test 1`] = `
<div style="align-items: center; display: flex;">
  <span class="MuiLinearProgress-root MuiLinearProgress-colorPrimary MuiLinearProgress-determinate css-mui-classname"
        role="progressbar"
        aria-valuenow="50"
        aria-valuemin="0"
        aria-valuemax="100"
        data-cy="progress"
        style="margin-right: 8px; width: 100%;"
  >
    <span class="MuiLinearProgress-bar MuiLinearProgress-barColorPrimary MuiLinearProgress-bar1Determinate css-mui-classname"
          style="transform: translateX(-50%);"
    >
    </span>
  </span>
  <p class="MuiTypography-root MuiTypography-body2 css-mui-classname"
     style="min-width: 40px;"
  >
    50%
  </p>
</div>
`;
